browser/themes/gnomestripe/browser/preferences/preferences.css
#BrowserPreferences radio[pane] {
  list-style-image: url("chrome://browser/skin/preferences/Options.png"); 
}

radio[pane=paneMain] {
	-moz-image-region: rect(0px, 32px,  32px, 0px)
}
radio[pane=paneMain]:hover, radio[pane=paneMain][selected="true"]  {
	-moz-image-region: rect(32px, 32px,  64px, 0px)
}

radio[pane=panePrivacy] {
	-moz-image-region: rect(0px, 64px,  32px, 32px)
}
radio[pane=panePrivacy]:hover, radio[pane=panePrivacy][selected="true"]  {
	-moz-image-region: rect(32px, 64px,  64px, 32px)
}

radio[pane=paneContent] {
	-moz-image-region: rect(0px, 96px,  32px, 64px)
}
radio[pane=paneContent]:hover, radio[pane=paneContent][selected="true"]  {
	-moz-image-region: rect(32px, 96px,  64px, 64px)
}

radio[pane=paneFeeds] {
	-moz-image-region: rect(0px, 96px,  32px, 64px)
}
radio[pane=paneFeeds]:hover, radio[pane=paneFeeds][selected="true"]  {
	-moz-image-region: rect(32px, 96px,  64px, 64px)
}

radio[pane=paneSecurity] {
	-moz-image-region: rect(0px, 128px, 32px, 96px)
}
radio[pane=paneSecurity]:hover, radio[pane=paneSecurity][selected="true"] {
	-moz-image-region: rect(32px, 128px, 64px, 96px)
}

radio[pane=paneTabs] {
	-moz-image-region: rect(0px, 192px, 32px, 160px)
}
radio[pane=paneTabs]:hover, radio[pane=paneTabs][selected="true"] {
	-moz-image-region: rect(32px, 192px, 64px, 160px)
}

radio[pane=paneAdvanced] {
	-moz-image-region: rect(0px, 160px, 32px, 128px)
}
radio[pane=paneAdvanced]:hover, radio[pane=paneAdvanced][selected="true"] {
	-moz-image-region: rect(32px, 160px, 64px, 128px)
}


#browserHomePage {
  padding-top: 2px;
  padding-bottom: 3px;
  -moz-padding-start: 4px;
  -moz-padding-end: 2px;
  background-color: -moz-Dialog;
}


filefield {
  margin: 2px 4px;
  -moz-appearance: textfield;
}

.fileFieldContentBox {
  background-color: -moz-Dialog;
  color: -moz-DialogText;
  margin: 1px;
}

filefield[disabled="true"] .fileFieldContentBox {
  -moz-opacity: 0.5;
}

filefield[disabled="true"] .fileFieldIcon {
  -moz-opacity: 0.2;
}

.fileFieldIcon {
  width: 16px;
  height: 16px;
  margin-top: 2px;
  margin-bottom: 2px;
  -moz-margin-start: 2px;
  -moz-margin-end: 4px;
}

.fileFieldLabel {
  -moz-appearance: none;
  background-color: transparent;
  border: none;
  padding: 1px 0px 0px 0px;
  margin: 0px;
}


.windowDialog,
.windowDialog prefpane {
  padding: 0px;
}

.contentPane {
  margin: 9px 8px 5px 8px;
}

.actionButtons {
  margin: 0px 3px 6px 3px !important;
}


#cookiesChildren::-moz-tree-image(domainCol) {
  width: 16px;
  height: 16px;
  margin: 0px 2px;
  list-style-image: url("chrome://global/skin/icons/folder-item.png") !important;
  -moz-image-region: rect(0px, 16px, 16px, 0px);
}

#cookiesChildren::-moz-tree-image(domainCol, container) {
  -moz-image-region: rect(0px, 32px, 16px, 16px);
}

#cookiesChildren::-moz-tree-image(domainCol, container, open) {
  -moz-image-region: rect(16px, 32px, 32px, 16px);
}

#cookieInfoBox {
  border: 1px solid ThreeDShadow;
  -moz-border-radius: 0px;
  margin: 4px;
  padding: 0px;
}

#cookieInfoBox textbox {
  background-color: transparent;
}

#cookieInfoGrid {
  background-color: #E9E7E3; 
}


#fileExtension {
  width: 5em; 
}

#extensionChildren::-moz-tree-image(fileExtension) {
  margin: 0px 5px 0px 0px;
}

#typeField {
  font-weight: bold; 
}


#typeIcon {
  width: 32px;
  height: 32px;
  -moz-margin-end: 3px;
}

#typeField {
  background-color: transparent;
  margin-top: 1px !important;
  margin-bottom: 2px !important;
  -moz-margin-start: 6px !important;
  -moz-margin-end: 5px !important;
}

#extensionField {
  color: GrayText;
  font-weight: bold;
}
#ChangeActionDialog {
  padding: 0px;
}

#ChangeActionDialog .dialog-button-box {
  padding-top: 8px;
  padding-bottom: 10px;
  -moz-padding-start: 8px;
  -moz-padding-end: 10px;  
}

#changeActionHeader {
  border-bottom: 2px groove ThreeDFace;
  margin: 0px;
  padding: 10px;
  background-color: -moz-Field;
  color: -moz-FieldText;  
}

#changeActionContent {
  padding-top: 8px;
  padding-bottom: 10px;
  -moz-padding-start: 9px;
  -moz-padding-end: 10px;
}

#defaultAppIcon {
  width: 16px;
  height: 16px;
  -moz-margin-start: 2px;
}

#defaultAppName {
  -moz-margin-start: 6px !important; 
  font-weight: bold;
}

